[project]
name = "locality-sensitive-hashing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
]

[tool.ruff.lint]
preview = true
select = ["E", "F"]
ignore = ["F403", "F405"]

[[tool.uv.index]]
name = "sklabs.cloud"
url = "https://pypi.sklabs.cloud/index/"
